CE-3303 Fix words alignment in user header

--- a/front/main/app/styles/component/_recent-change.scss
+++ b/front/main/app/styles/component/_recent-change.scss
@@ -5,6 +5,9 @@
 
 	.avatar {
 		display: inline-block;
+		svg {
+			vertical-align: middle;
+		}
 	}
 
 	.avatar-username {
